dataset/local/tf_ecs_secret_env_vars/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-secret-env-variables
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: validate-secret-env-variables
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: validate-secret-env-variables
    kind: Plan
    resources:
      - bad-plan
    result: fail
